testdata/baselines/reference/submodule/conformance/moduleExportNestedNamespaces.errors.txt
mod.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(5,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(7,14): error TS2339: Property 'p' does not exist on type 'Classic'.
use.js(1,20): error TS2306: File 'mod.js' is not a module.


==== mod.js (4 errors) ====
    module.exports.n = {};
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports.n.K = function C() {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        this.x = 10;
    }
    module.exports.Classic = class {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        constructor() {
            this.p = 1
                 ~
!!! error TS2339: Property 'p' does not exist on type 'Classic'.
        }
    }
    
==== use.js (1 errors) ====
    import * as s from './mod'
                       ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
    
    var k = new s.n.K()
    k.x
    var classic = new s.Classic()
    
    
    /** @param {s.n.K} c
        @param {s.Classic} classic */
    function f(c, classic) {
        c.x
        classic.p
    }
    